<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TheSexButton</string>
    <string name="request_condom_text">This app will put in an order request for a condom to you.
        Please fill out the below form and press the button to request a condom delivery.</string>
    <string name="request_condom_button_text">I\'m Feeling Lucky</string>
    <string name="action_settings">Settings</string>
    <string name="request_condom_dorm_name">Dorm Name:</string>
    <string name="request_condom_dorm_room">Dorm Room:</string>
    <string name="request_condom_delivery_type">Where do you want the condom delivered:</string>
    <string name="request_condom_delivery_type_to_room">To My Room</string>
    <string name="request_condom_delivery_type_to_lounge">To My Lounge</string>
    <string name="request_condom_delivery_type_to_dorm">To My Dorm</string>

    <string-array name="dorms_array">
        <item>AP</item>
        <item>Dana</item>
        <item>DK</item>
        <item>Hallowell</item>
        <item>Kyle</item>
        <item>Lodges</item>
        <item>Mertz</item>
        <item>ML</item>
        <item>Palmer</item>
        <item>Parrish</item>
        <item>Pittenger</item>
        <item>Roberts</item>
        <item>Wharton</item>
        <item>Willets</item>
        <item>Woolman</item>
        <item>Worth</item>
    </string-array>
</resources>
