<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RequestCondomActivity"
    android:textAlignment="center">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:text="@string/request_condom_text"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/request_condom_text"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:background="@android:color/darker_gray"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_condom_dorm_name"/>

            <!--
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/request_condom_edit_text_dorm_name"
                android:layout_centerHorizontal="true"/>
            -->

            <Spinner
                android:id="@+id/dorms_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_condom_dorm_room"/>

            <EditText
                android:inputType="number"
                android:maxLength="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/request_condom_edit_text_dorm_room"
                android:layout_centerHorizontal="true"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:text="@string/request_condom_delivery_type"
                />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/request_condom_delivery_type_radio_group">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/request_condom_delivery_type_radio_to_room"
                    android:text="@string/request_condom_delivery_type_to_room"
                    />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/request_condom_delivery_type_radio_to_lounge"
                    android:text="@string/request_condom_delivery_type_to_lounge"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/request_condom_delivery_type_radio_to_dorm"
                    android:text="@string/request_condom_delivery_type_to_dorm"/>
                </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_condom_button_text"
                android:id="@+id/request_condom_button"
                android:gravity="center"
                />

        </LinearLayout>








    </LinearLayout>

</RelativeLayout>
